Installed package for the DHT11 temperature/humidity sensor, added a test file to test that it works. Also added a test file that demonstrates tasks with reading from the sensor and printing in the terminal.

--- a/Ultrasonic_Sensor/A02YYUW/package.yaml
+++ b/Ultrasonic_Sensor/A02YYUW/package.yaml
@@ -1,4 +1,7 @@
 dependencies:
+  dhtxx:
+    url: github.com/toitware/toit-dhtxx
+    version: ^1.4.0
   dyp_a01:
     url: github.com/davidg238/dyp_a01
     version: ^1.0.0
