--- a/Ultrasonic_Sensor/A02YYUW/package.yaml
+++ b/Ultrasonic_Sensor/A02YYUW/package.yaml
@@ -1,4 +1,7 @@
 dependencies:
+  dartino_regexp:
+    url: github.com/erikcorry/toit-dartino-regexp
+    version: ^0.2.0
   dhtxx:
     url: github.com/toitware/toit-dhtxx
     version: ^1.4.0
